# wlshud

./: Cargo.toml  LICENSE  README.md  build.rs
resources/: wlshud.gresource.xml
src/: actions.rs  config.rs  main.rs  main_widgets.rs  rendering.rs  searching.rs  shortcuts.rs  window.rs
src/nonrust/: default_style.css
src/rendering/: layout.rs  text.rs
src/xml/: settings.xml
