[package]
name = "wlshud"
version = "0.1.0"
edition = "2024"

[dependencies]
async-channel = "2.5.0"
directories = "6.0.0"
freedesktop-desktop-entry = "0.8.1"
freedesktop-icons = "0.4.0"
freedesktop_entry_parser = "2.0.1"
gtk4 = "0.10.3"
gtk4-layer-shell = "0.7.1"
json = "0.12.4"
libadwaita = "0.8.1"
rust-fuzzy-search = "0.1.1"
serde = "1.0.228"
skia-safe = { version = "0.93.0", features = ["textlayout"] }
smithay-client-toolkit = "0.20.0"
tween = "2.1.0"

[build-dependencies]
glib-build-tools = "0.22.0"
